add gorm to app.

--- a/glide.yaml
+++ b/glide.yaml
@@ -2,3 +2,5 @@ package: golang-web-starter
 import:
 - package: github.com/gin-gonic/gin
   version: ^1.1.4
+- package: github.com/jinzhu/gorm
+  version: ^1.0.0
