add migration lib to do the database migration

--- a/base-image/Dockerfile
+++ b/base-image/Dockerfile
@@ -8,3 +8,5 @@ ENV PATH "$PATH:/usr/local/node-v6.9.1-linux-x64/bin/"
 RUN npm install -g yarn
 RUN curl https://glide.sh/get | sh
 RUN go get github.com/codegangsta/gin
+RUN go get -u -d github.com/mattes/migrate/cli github.com/lib/pq
+RUN go build -tags 'postgres' -o /usr/local/bin/migrate github.com/mattes/migrate/cli
