--- a/glide.yaml
+++ b/glide.yaml
@@ -4,3 +4,6 @@ import:
   version: ^1.1.4
 - package: github.com/jinzhu/gorm
   version: ^1.0.0
+- package: github.com/mattes/migrate
+  version: ^3.0.1
+- package: github.com/lib/pq
