--- a/glide.yaml
+++ b/glide.yaml
@@ -7,3 +7,7 @@ import:
 - package: github.com/mattes/migrate
   version: ^3.0.1
 - package: github.com/lib/pq
+- package: github.com/stretchr/testify
+  version: ^1.1.4
+- package: github.com/smartystreets/goconvey
+  version: ^1.6.2
